--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
         "store-view-id": 1,
         "store-view-name": "Default Store View",
         "website-id": 1,
-        "website-name": "Main Website"
+        "website-name": "Main Website 123"
       }
     },
     "/cruz-france/": {
