Update fstab.yaml new dealer

--- a/fstab.yaml
+++ b/fstab.yaml
@@ -8,3 +8,4 @@ folders:
   /cruz-france/products/: /cruz-france/products/default
   /bolt-france/products/: /bolt-france/products/default
   /autosphere-france-dealer/products/: /autosphere-france-dealer/products/default
+  /auto-distribution-languedocienne-dealer/: /auto-distribution-languedocienne-dealer/default
